# Watchface-No.-2

./: .gitignore  AGENTS.md  CMakeLists.txt  COLORS.md  Justfile  Makefile  README.md  babel.config.js  babel.config.json  compile_commands.json  eslint.config.mjs  package-lock.json  package.json  wscript
.github/: dependabot.yml
.github/workflows/: ci.yaml
scripts/: build.py  config.py  coverage.py  generate.py  run.py  tests.py  utils.py
src/c/: app_messaging.c  app_messaging.h  battery.h  battery_bar.c  battery_bar.h  battery_listener.c  battery_listener.h  clay_settings.c  clay_settings.h  date.c  date.h  developer_options.h  dotted_text_layer.c  dotted_text_layer.h  health_listener.c  health_listener.h  layer_factory.c  layer_factory.h  main.c  main.h  pebble.h  persist_keys.h  pixel_matrix_drawer.c  pixel_matrix_drawer.h  release.h  stepcount.c  stepcount.h  theme.c  theme.h  tick_listener.c  tick_listener.h  time.c  time.h  util.c  util.h  watch_layout.c  watch_layout.h  weather.c  weather.h
src/js-config/: configPage.js
src/js-modern/: app_messaging.js  index.js  logger.js  persistence.js
src/pkjs/: app_messaging.js  config.js  configPage.js  index.js  persistence.js  timeline.json  util.js  weather.js
tests/c/: app_messaging_test.c  battery_bar_test.c  battery_listener_test.c  clay_settings_test.c  date_test.c  debug_layer_test.c  dotted_text_layer_test.c  forecast_series_test.c  graph_utils_test.c  health_listener_test.c  heartrate_test.c  layer_factory_test.c  main_test.c  pebble.h  pebble_mock.h  phone_connection_test.c  pixel_matrix_drawer_test.c  (+13 more)
(+99 files in other folders)
